welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: ';' expected but 'if' found.
getCouleurSol() if (getCouleurSol()==Color.green){return true;}else{return false;}
                ^